# amanita

./: .dir-locals.el  .gitignore  .travis.yml  LICENSE  README.rst  pyproject.toml  setup.py  tox.ini
amanita/: __init__.py  __main__.py  amanita.py  cli.py  project.py
docs/: Makefile
docs/source/: amanita.rst  conf.py  index.rst  modules.rst
docs/uml/: amanita-main.txt  direnv.txt  main.txt  project.txt
resources/: tox-template.toml
tests/: test_amanita.py  test_direnv.py  test_project.py  test_tox.py  test_travis.py  test_twine.py
